--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>About</title>
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="style.css">
 		<link href='https://fonts.googleapis.com/css?family=Nixie+One' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Cabin:400,700|Questrial' rel='stylesheet' type='text/css'>
 	</head>
