--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 			<img class= "profile-img" src="images/working.jpg">	
 			<p> I'm a Montreal-based journalist who has worked at the Montreal Gazette and Toronto Star. I currently work on the web desk at CTV Montreal and I'm the associate editor at Montreal Families. I also freelance for various publications.</p>
 			<p>I grew up just outside of Montreal. Swearing in franglais is one of my true passions.</p>
-			<p>My favourite things to write and read about involve mental health issues, bilingualism issues and sports, especially baseball.</p>
+			<p>My favourite things to write and read about involve mental health issues and sports, especially baseball.</p>
 		</section>
 
 		<div class= "caption">
