--- a/about.html
+++ b/about.html
@@ -24,13 +24,11 @@
 			<img class= "profile-img" src="images/working.jpg">	
 			<p> I'm a Montreal-based journalist who has worked at the Montreal Gazette and Toronto Star. I currently work on the web desk at CTV Montreal and I'm the associate editor at Montreal Families. I also freelance for various publications.</p>
 			<p>I grew up just outside of Montreal and I adore this city. The picture on my homepage was taken at St. Joseph's Oratory. On a related note, swearing in franglais is one of my true passions.</p>
-			<p>My favourite things to write and read about involve mental health issues and sports, especially baseball. I'm also trying to learn how to create things using code. Things like this website (created with much help from the mentors at <a href="http://ladieslearningcode.com/city/montreal/">Ladies Learning Code Montreal</a>).</p>
+			<p>My favourite things to write and read about involve mental health issues, bilingualism (in Quebec, Canada and elsewhere) and sports, especially baseball. I'm also trying to learn how to create things using code. Things like this website (created with much help from the mentors at <a href="http://ladieslearningcode.com/city/montreal/">Ladies Learning Code Montreal</a>).</p>
 		</section>
 
 		<div class= "caption">
 			<p>Photo: c'est moi covering a university baseball game a few years ago.</p>
 		</div>
-	
-			<!-- how 2 add link to img <li><a href="index.html"><img src="images/IMG_2027.jpg"></a></li> -->
 	</body>
 </html>
